# project-euler-solutions

./: .gitignore  LICENSE  Main.hs  ProjectEulerSolver.cabal  README  README.md  project-euler-solver.cabal
Ahakki/: Numis.hs  PrintResult.hs  Resis.hs
ProjectEuler/: Problem001.hs  Problem031.hs  Problem204.hs  Problem357.hs  Problem491.hs
app/: Main.hs
src/ProjectEuler/: Result.hs
src/ProjectEuler/Helper/: Numis.hs
src/ProjectEuler/Solution/: Problem001.hs  Problem031.hs  Problem112.hs  Problem204.hs  Problem357.hs  Problem491.hs
test/: Spec.hs
