name:                project-euler-solver
version:             0.0.0
synopsis:            Solutions for Project Euler
description:         Please see README.md
homepage:            https://github.com/ahakki/project-euler-solver#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Hakki
maintainer:          ahk@ahakki.xyz
copyright:           2016 Alexander Hakki
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ProjectEuler.Helper.Numis
                     , ProjectEuler.Result
                     , ProjectEuler.Solution.Problem001
                     , ProjectEuler.Solution.Problem031
                     , ProjectEuler.Solution.Problem112
                     , ProjectEuler.Solution.Problem204
                     , ProjectEuler.Solution.Problem357
                     , ProjectEuler.Solution.Problem491
  build-depends:       base
                     , primes
                     , digits
  default-language:    Haskell2010

executable ProjectEulerSolver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project-euler-solver
  default-language:    Haskell2010

test-suite woop-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-euler-solver
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/ahakki/project-euler-solver
